fixed issue where technologies used bullets was causing the page to not be responsive on smaller screens.

--- a/src/App.css
+++ b/src/App.css
@@ -236,6 +236,7 @@ header {
 
 .technology-list {
     display: flex;
+    flex-wrap: wrap;
 }
 
 .technology {
